--- a/02-eleventy-site/package.json
+++ b/02-eleventy-site/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
